# Learning-C

./: .gitignore  CMakeLists.txt  quicksort.c
2023exercises2/: CMakeLists.txt  E2Q1.c
Learning C/: a.out  introduction  introduction.c
Learning C/exercise0/: a.out  house  oval  rectangle  rectangle.c
exercise0/: graphics.c  house.c  oval.c  picture.c
exercise1/: compile
exercise1/q1/: q1.c
exercise1/q10/: q10.c
exercise1/q3/: q3.c
exercise1/q4/: q4.c
exercise1/q5/: q5.c
exercise1/q6/: q6.c
exercise1/q7/: q7.c
exercise1/q8/: q8.c
exercise1/q9/: q9.c
exercise2/: CMakeLists.txt  compile  q2.c
exercise2/q1/: q1.c
exercise2/q10/: q10.c
exercise2/q11/: q11.c
exercise2/q2/: q2.c
exercise2/q3/: q3.c
exercise2/q4/: q4.c
exercise2/q5/: q5.c
exercise2/q6/: q6.c
exercise2/q7/: q7.c
exercise2/q8/: q8.c
exercise2/q9/: q9.c
exercise3/: CMakeLists.txt  a.out
exercise3/q1/: q1.c
exercise3/q2/: q2.c
exercise3/q3/: q3.c
exercise3/q4/: q4.c
exercise3/q5/: q5.c
exercise3/q6/: q6.c
exercise3/q7/: q7  q7.c
exercise3/q8/: q8.c
exercise3/q9/: q9  q9.c
exercise4/: CMakeLists.txt
exercise4/q1/: q1  q1.c
exercise4/q2/: q2.c
exercise4/q3/: q3.c
exercise4/q4/: q4.c
exercise4/q5/: q5.c
